--- a/wordpress/wp-content/themes/mythme/style.css
+++ b/wordpress/wp-content/themes/mythme/style.css
@@ -1,11 +1,8 @@
 /*
-    Theme Name: my first theme
-    Auther: Masanari
+    Theme Name: momon
     Version: 1.0
 */
 
-
-
 body{
-    color: orange;
+    color: green;
 }
